# pose-transmitter

./: LICENCE.md  README.md  main.py  pyproject.toml  qudp_transmitter.py  tf_hub_models.py  tf_hub_utils.py  video_pose.py
inference_hub/: hub.py  inference_models.py
pose_transmitter/: main.py  qudp_transmitter.py  video_pose.py  video_pose_processor.py
pose_transmitter/inference_hub/: hub.py  inference_utils.py
